--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ __pycache__/
 Resultados/
 SHP_Magdalena/copia_con_altitud/
 SHP_Magdalena/sin_altitud/
+Sitios_Colecta/Pto_colecta_shp/
 *.rar
 *.zip
 *xlsx
