--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@ __pycache__/
 Resultados/
 SHP_Magdalena/copia_con_altitud/
 SHP_Magdalena/sin_altitud/
-Sitios_Colecta/Pto_colecta_shp/
+Sitios_Colecta/
 *.rar
 *.zip
-*xlsx
+*.xlsx 
 *.csv
 modelo_con_umbral_app.py
 pruebas.ipynb
