--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ __pycache__/
 Rio/
 Mapa_R/
 Resultados/
+Municipios/
 SHP_Magdalena/copia_con_altitud/
 SHP_Magdalena/sin_altitud/
 Sitios_Colecta/*
